[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ena_download"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.scripts]
ena-download = "ena_download:cli"